# minicalc

./: README.md
server/: Cargo.toml
server/src/: app.rs  functions.rs  main.rs
server/src/sheet/: cell.rs  cell_update_request.rs  cell_update_response.rs  mod.rs
server/src/sheet/expression/: mod.rs  node.rs  optimize.rs  parse.rs  solve.rs
server/src/sheet/expression/tokenizer/: error_message.rs  mod.rs  precedence.rs  token.rs  token_info.rs  tokenize.rs
web/: index.html  package.json  tsconfig.json
web/src/: app.tsx  cell.tsx  cells-slice.ts  connection-slice.ts  grid.tsx  header.tsx  main.tsx  modal-host.tsx  modal-slice.ts  store.ts  ws-middleware.ts
