[package]
name = "minicalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
regex = "1.5"
lazy_static = "1.4"
rust_decimal = { version = "1.32.0", features = ["maths"] }
tokio-tungstenite = "0.21.0"

[lints.clippy]
vec_box = "allow"
